<resources>
    <string name="app_name">ProjectSC</string>
    <string name="title_activity_main" translatable="false">Main</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_navigationbottom" translatable="false">Navigationbottom</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="edit">edit</string>
    <string name="delete_account">Delete Account</string>
    <string name="register">Register</string>
    <string name="login">login</string>
    <string name="history">History</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgetpassword">Forgot password?</string>
    <string name="create_account">create account</string>
    <string name="enter_your_email">Enter your account e-mail</string>
    <string name="send">Send</string>
    <string name="adddevice">Add Device</string>
    <string name="devicename">DeviceName</string>
    <string name="devicecode">DeviceCode</string>
    <string name="startdate">Start date</string>
    <string name="add">Add</string>
    <string name="insidestatus">Status (inside)</string>
    <string name="outsidestatus">Status (outside)</string>
    <string name="temperature">temperature</string>
    <string name="humidity">humidity</string>
    <string name="fillwater">fillwater</string>
    <string name="fillair">fillair</string>
    <string name="minute">minute</string>
    <string name="every">every</string>
    <string name="day">day</string>
    <string name="datecount">DateCount</string>
    <string name="profile">Profile</string>
    <string name="inside">inside</string>
    <string name="outside">outside</string>
    <string name="resetpassword">Reset Password</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="humidityList">Humidity :</string>
    <string name="temperatureList">Temperature :</string>
    <string name="scanQRCode">scanQRCode</string>
    <string name="ScanComplete">Scan Complete</string>
    <string name="maximum">maximum</string>
    <string name="minimum">minimum</string>
    <string name="date">date</string>
    <string name="reset_bin">reset bin</string>
    <string name="reset_setting">reset setting</string>
    <string name="new_password">New password</string>

    <string-array name="notitype">
        <item>-</item>
        <item>อุณหภูมิน้อยกว่าที่กำหนด</item>
        <item>อุณหภูมิมากกว่าที่กำหนด</item>
        <item>ความชื้นน้อยกว่าที่กำหนด</item>
        <item>ความชื้นมากกว่าที่กำหนด</item>
        <item>เริ่มทำการเติมน้ำ</item>
        <item>เริ่มทำการเติมอากาศ</item>
        <item>การเติมน้ำเสร็จเรียบร้อย</item>
        <item>การเติมอากาศเสร็จเรียบร้อย</item>
        <item>เซนเซอร์มีปัญหา</item>

    </string-array>

    <string-array name="notitype2">
        <item>เริ่มทำการเติมน้ำ</item>
        <item>เริ่มทำการเติมอากาศ</item>
        <item>อุณหภูมิมากกว่าที่กำหนด</item>
        <item>ความชื้นน้อยกว่าที่กำหนด</item>
        <item>อุณหภูมิน้อยกว่าที่กำหนด</item>
        <item>ความชื้นมากกว่าที่กำหนด</item>
        <item>การเติมน้ำเสร็จเรียบร้อย</item>
        <item>การเติมอากาศเสร็จเรียบร้อย</item>
        <item>เซนเซอร์มีปัญหา</item>

    </string-array>

    <string-array name="graphtype">
        <item>โปรดเลือกแบบที่ต้องการแสดง</item>
        <item>เลือกตามวัน</item>
        <item>เลือกตามช่วงวัน</item>
        <item>เลือกทั้งหมด</item>
    </string-array>

    <string-array name="graphtypeshow">

        <item>แสดงทั้งอุณหภูมิและความชื้น</item>
        <item>แสดงเฉพาะอุณหภูมิ</item>
        <item>แสดงเฉพาะความชื้น</item>

    </string-array>

</resources>
