<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Register">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_block"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintEnd_toEndOf="@+id/editemail"
            app:layout_constraintStart_toStartOf="@+id/editemail"
            app:layout_constraintTop_toBottomOf="@+id/editemail" />

        <EditText
            android:id="@+id/editname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/editemail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/editemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/editpass"
            app:layout_constraintEnd_toEndOf="@+id/editname"
            app:layout_constraintStart_toStartOf="@+id/editname"
            app:layout_constraintTop_toBottomOf="@+id/editname" />

        <Button
            android:id="@+id/button5"
            android:layout_width="217dp"
            android:layout_height="49dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_shape_default"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editpass"
            app:layout_constraintStart_toStartOf="@+id/editpass"
            app:layout_constraintTop_toBottomOf="@+id/editpass" />

        <TextView
            android:id="@+id/visible_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_visibility_off_black_24dp"
            android:text="1"
            android:textColor="#00ffffff"
            app:layout_constraintBottom_toBottomOf="@+id/editpass"
            app:layout_constraintEnd_toEndOf="@+id/editpass"
            app:layout_constraintTop_toTopOf="@+id/editpass" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>